Fixed: wflow-consoleweb - Regression of 83a8ee7. App Center - Userview icon does not align center in mobile.  @6.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/appCenter.css
+++ b/wflow-consoleweb/src/main/webapp/css/appCenter.css
@@ -19,7 +19,7 @@
     margin-bottom: 20px;
     margin-right: 20px;
 }
-#apps div.userview-icon {
+#apps span.userview-icon {
     display: inline-block;
     height: 70px;
     overflow: hidden;
